# owl

./: README.md
branding/: generate_ico.py  owl.manifest  owl.rc
docker/: Dockerfile  build-owl.sh  docker-compose.yml
docs/: architecture.md  building.md  chat-session-log.md  memory-optimizations.md
installer/: owl_installer.nsi
owl_build/: BUILD.gn  args.gn  args_win.gn  owl_features.gni
scripts/: apply_patches.sh  apply_patches_win.ps1  build.sh  build_win.ps1  create_patches.sh  fetch_chromium.sh  fetch_chromium_win.ps1  memory_benchmark.sh  setup_and_build.ps1
src/base/allocator/partition_allocator/: owl_partition_config.h
src/chrome/browser/owl/: BUILD.gn  owl_feature_flags.cc  owl_feature_flags.h  owl_memory_monitor.cc  owl_memory_monitor.h  owl_memory_pressure.cc  owl_memory_pressure.h  owl_tab_discard_policy.cc  owl_tab_discard_policy.h
src/chrome/browser/owl/adblocker/: BUILD.gn  owl_filter_list_manager.cc  owl_filter_list_manager.h  owl_request_filter.cc  owl_request_filter.h
src/chrome/browser/owl/pages/: owl_memory_page.cc  owl_memory_page.h  owl_tabs_page.cc  owl_tabs_page.h
src/chrome/browser/ui/views/owl/: BUILD.gn  owl_browser_view.cc  owl_browser_view.h  owl_memory_indicator.cc  owl_memory_indicator.h  owl_menu.cc  owl_menu.h  owl_tab_strip.cc  owl_tab_strip.h  owl_toolbar.cc  owl_toolbar.h
