# Owl Browser - Build flags target
# Generates owl_build/owl_buildflags.h for use in C++ code.

import("//build/buildflag_header.gni")
import("//owl_build/owl_features.gni")

buildflag_header("owl_buildflags") {
  header = "owl_buildflags.h"
  flags = [
    "OWL_MEMORY_OPTIMIZATION=$owl_memory_optimization",
    "OWL_AGGRESSIVE_GC=$owl_aggressive_gc",
    "OWL_ISOHEAP_ENABLED=$owl_isoheap_enabled",
    "OWL_ARENA_ALLOCATOR=$owl_arena_allocator",
    "OWL_ADBLOCKER=$owl_adblocker",
    "OWL_CUSTOM_UI=$owl_custom_ui",
    "OWL_MEMORY_PRESSURE_TIERS=$owl_memory_pressure_tiers",
    "OWL_TAB_LRU_UNLOADING=$owl_tab_lru_unloading",
    "OWL_MEMORY_REPORTER=$owl_memory_reporter",
  ]
}
